资源包/LabVIEW有用程序/例程DMC3000系列/VC.NET/例2_回原点运动/LTDMC.h

typedef unsigned long       DWORD;
typedef unsigned short      WORD;
//速度设置		
DMC_API short __stdcall dmc_set_profile(WORD CardNo,WORD axis,double Min_Vel,double Max_Vel,double Tacc,double Tdec,double stop_vel);	//设定速度曲线参数
DMC_API short __stdcall dmc_get_profile(WORD CardNo,WORD axis,double *Min_Vel,double *Max_Vel,double *Tacc,double *Tdec,double *stop_vel);	//读取速度曲线参数
DMC_API short __stdcall dmc_set_s_profile(WORD CardNo,WORD axis,WORD s_mode,double s_para);	//设置平滑速度曲线参数
DMC_API short __stdcall dmc_get_s_profile(WORD CardNo,WORD axis,WORD s_mode,double *s_para);	//读取平滑速度曲线参数
DMC_API short __stdcall dmc_set_vector_profile_multicoor(WORD CardNo,WORD Crd, double Min_Vel,double Max_Vel,double Tacc,double Tdec=0,double Stop_Vel=0);
DMC_API short __stdcall dmc_get_vector_profile_multicoor(WORD CardNo,WORD Crd, double *Min_Vel,double *Max_Vel,double *Tacc,double *Tdec=NULL,double *Stop_Vel=NULL);
//运动模块脉冲模式		
DMC_API short __stdcall dmc_set_pulse_outmode(WORD CardNo,WORD axis,WORD outmode);	//设定脉冲输出模式
DMC_API short __stdcall dmc_get_pulse_outmode(WORD CardNo,WORD axis,WORD* outmode);	//读取脉冲输出模式
//单轴运动		
DMC_API short __stdcall dmc_pmove(WORD CardNo,WORD axis,long dist,WORD posi_mode);	//指定轴做定长位移运动
DMC_API short __stdcall dmc_vmove(WORD CardNo,WORD axis,WORD dir);	//指定轴做连续运动
//PVT运动
DMC_API short __stdcall dmc_PvtTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos,double *pVel);
DMC_API short __stdcall dmc_PtsTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos,double *pPercent);
DMC_API short __stdcall dmc_PvtsTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos,double velBegin,double velEnd);
DMC_API short __stdcall dmc_PttTable(WORD CardNo,WORD iaxis,DWORD count,double *pTime,long *pPos);
DMC_API short __stdcall dmc_PvtMove(WORD CardNo,WORD AxisNum,WORD* AxisList);
//在线变位/变速
DMC_API short __stdcall dmc_reset_target_position(WORD CardNo,WORD axis,long dist,WORD posi_mode=0);	//运动中改变目标位置
DMC_API short __stdcall dmc_change_speed(WORD CardNo,WORD axis,double Curr_Vel,double Taccdec);	//在线改变指定轴的当前运动速度及加减速时间
DMC_API short __stdcall dmc_update_target_position(WORD CardNo,WORD axis,long dist,WORD posi_mode=0);	//强行改变目标位置
//直线插补		
DMC_API short __stdcall dmc_line_multicoor(WORD CardNo,WORD Crd,WORD axisNum,WORD *axisList,long *DistList,WORD posi_mode);	//指定轴直线插补运动
DMC_API short __stdcall dmc_arc_move_multicoor(WORD CardNo,WORD Crd,WORD *AxisList,long *Target_Pos,long *Cen_Pos,WORD Arc_Dir,WORD posi_mode);
//回零运动	
DMC_API short __stdcall dmc_set_home_pin_logic(WORD CardNo,WORD axis,WORD org_logic,double filter=0); 	//设置HOME信号
DMC_API short __stdcall dmc_get_home_pin_logic(WORD CardNo,WORD axis,WORD *org_logic,double *filter=NULL); 	//读取设置HOME信号	
DMC_API short __stdcall dmc_set_homemode(WORD CardNo,WORD axis,WORD home_dir,double vel_mode,WORD mode,WORD EZ_count=0);//设定指定轴的回原点模式
DMC_API short __stdcall dmc_get_homemode(WORD CardNo,WORD axis,WORD *home_dir, double *vel_mode,WORD *home_mode,WORD *EZ_count=NULL);//读取指定轴的回原点模式
DMC_API short __stdcall dmc_home_move(WORD CardNo,WORD axis);
	
//3410专用 回原点减速信号配置
//DMC_API short __stdcall dmc_set_sd_mode(WORD CardNo,WORD axis,WORD enable,WORD sd_logic,WORD sd_mode); 	//设置SD信号
//DMC_API short __stdcall dmc_get_sd_mode(WORD CardNo,WORD axis,WORD* enable,WORD *sd_logic,WORD *sd_mode); 	//读取设置SD信号
//3800专用 原点锁存
DMC_API short __stdcall dmc_set_homelatch_mode(WORD CardNo,WORD axis,WORD enable,WORD logic,WORD source);//设置原点锁存模式
DMC_API short __stdcall dmc_get_homelatch_mode(WORD CardNo,WORD axis,WORD* enable,WORD* logic,WORD* source);
DMC_API long __stdcall dmc_get_homelatch_flag(WORD CardNo,WORD axis);//读取锁存标志
DMC_API short __stdcall dmc_reset_homelatch_flag(WORD CardNo,WORD axis);//复位原点锁存标志
DMC_API long __stdcall dmc_get_homelatch_value(WORD CardNo,WORD axis);//读取锁存值
//手轮运动	
//3800专用 手轮通道选择	
DMC_API short __stdcall dmc_set_handwheel_channel(WORD CardNo,WORD index);
DMC_API short __stdcall dmc_get_handwheel_channel(WORD CardNo,WORD* index);
//一个手轮信号控制单个轴运动
DMC_API short __stdcall dmc_set_handwheel_inmode(WORD CardNo,WORD axis,WORD inmode,long multi,double vh=0);	//设置输入手轮脉冲信号的工作方式 控制单轴
DMC_API short __stdcall dmc_get_handwheel_inmode(WORD CardNo,WORD axis,WORD *inmode,long *multi,double *vh=NULL);	//读取输入手轮脉冲信号的工作方式 控制单轴
//一个手轮信号控制多个轴运动
DMC_API short __stdcall dmc_set_handwheel_inmode_extern(WORD CardNo,WORD inmode,WORD AxisNum,WORD* AxisList,long* multi);	//设置输入手轮脉冲信号的工作方式 控制多轴
DMC_API short __stdcall dmc_get_handwheel_inmode_extern(WORD CardNo,WORD* inmode,WORD* AxisNum,WORD* AxisList,long *multi);
	
//启动指定轴的手轮脉冲运动
DMC_API short __stdcall dmc_handwheel_move(WORD CardNo,WORD axis);
	

//编码器		
DMC_API short __stdcall dmc_set_counter_inmode(WORD CardNo,WORD axis,WORD mode);	//设定编码器的计数方式
DMC_API short __stdcall dmc_get_counter_inmode(WORD CardNo,WORD axis,WORD *mode);	//读取编码器的计数方式
DMC_API long __stdcall dmc_get_encoder(WORD CardNo,WORD axis);
	
DMC_API short __stdcall dmc_set_encoder(WORD CardNo,WORD axis,long encoder_value);
DMC_API short __stdcall dmc_set_ez_mode(WORD CardNo,WORD axis,WORD ez_logic,WORD ez_mode=0,double filter=0);	//设置EZ信号
DMC_API short __stdcall dmc_get_ez_mode(WORD CardNo,WORD axis,WORD *ez_logic,WORD *ez_mode=NULL,double *filter=NULL);	//读取设置EZ信号
//高速锁存
DMC_API short __stdcall dmc_set_ltc_mode(WORD CardNo,WORD axis,WORD ltc_logic,WORD ltc_mode=0,double filter=0); 	//设置LTC信号
DMC_API short __stdcall dmc_get_ltc_mode(WORD CardNo,WORD axis,WORD*ltc_logic,WORD*ltc_mode=NULL,double *filter=NULL);	//读取设置LTC信号
DMC_API short __stdcall dmc_set_latch_mode(WORD CardNo,WORD axis,WORD all_enable,WORD latch_sourcee,WORD latch_channel=0); 	//设置锁存方式
DMC_API short __stdcall dmc_get_latch_mode(WORD CardNo,WORD axis,WORD *all_enable,WORD* latch_sourcee,WORD *latch_channel=NULL);
 
DMC_API short __stdcall dmc_reset_latch_flag(WORD CardNo,WORD axis); 	//复位锁存器标志
DMC_API short __stdcall dmc_get_latch_flag(WORD CardNo,WORD axis); 	//读取控制卡内有效锁存个数
DMC_API long __stdcall dmc_get_latch_value(WORD CardNo,WORD axis); 	//读取控制卡内锁存值，再连续锁存模式下读取一次控制卡内有效锁存个数将会自动减1,并将锁存值保存在PC缓冲区内
DMC_API short __stdcall dmc_get_latch_flag_extern(WORD CardNo,WORD axis); 	//读取锁存器已锁存个数
DMC_API long __stdcall dmc_get_latch_value_extern(WORD CardNo,WORD axis,WORD index); 	//按索引号读取PC缓冲区中已保存的锁存值，读的时候会将控制卡内的有效锁存值全部保存在PC缓冲区中
//LTC端口触发延时急停时间 单位：微秒
DMC_API short __stdcall dmc_set_latch_stop_time(WORD CardNo,WORD axis,long stop_time);
 
DMC_API short __stdcall dmc_get_latch_stop_time(WORD CardNo,WORD axis,long* stop_time);
//DMC3800专用 LTC反相输出
DMC_API short __stdcall dmc_SetLtcOutMode(WORD CardNo,WORD axis,WORD enable,WORD bitno);//设置LTC反向输出模式
DMC_API short __stdcall dmc_GetLtcOutMode(WORD CardNo,WORD axis,WORD *enable,WORD* bitno);
//单轴低速位置比较		
DMC_API short __stdcall dmc_compare_set_config(WORD CardNo,WORD axis,WORD enable, WORD cmp_source); 	//配置比较器
DMC_API short __stdcall dmc_compare_get_config(WORD CardNo,WORD axis,WORD *enable, WORD *cmp_source);	//读取配置比较器
DMC_API short __stdcall dmc_compare_clear_points(WORD CardNo,WORD axis); 	//清除所有比较点
DMC_API short __stdcall dmc_compare_add_point(WORD CardNo,WORD axis,long pos,WORD dir, WORD action,DWORD actpara); 	//添加比较点
DMC_API short __stdcall dmc_compare_get_current_point(WORD CardNo,WORD axis,long *pos); 	//读取当前比较点
DMC_API short __stdcall dmc_compare_get_points_runned(WORD CardNo,WORD axis,long *pointNum); 	//查询已经比较过的点
DMC_API short __stdcall dmc_compare_get_points_remained(WORD CardNo,WORD axis,long *pointNum); 	//查询可以加入的比较点数量
//二维低速位置比较
DMC_API short __stdcall dmc_compare_set_config_extern(WORD CardNo,WORD enable, WORD cmp_source); 	//配置比较器
DMC_API short __stdcall dmc_compare_get_config_extern(WORD CardNo,WORD *enable, WORD *cmp_source);	//读取配置比较器
DMC_API short __stdcall dmc_compare_clear_points_extern(WORD CardNo); 	//清除所有比较点
DMC_API short __stdcall dmc_compare_add_point_extern(WORD CardNo,WORD* axis,long* pos,WORD* dir, WORD action,DWORD actpara); 	//添加两轴位置比较点
DMC_API short __stdcall dmc_compare_get_current_point_extern(WORD CardNo,long *pos); 	//读取当前比较点
DMC_API short __stdcall dmc_compare_get_points_runned_extern(WORD CardNo,long *pointNum); 	//查询已经比较过的点
DMC_API short __stdcall dmc_compare_get_points_remained_extern(WORD CardNo,long *pointNum); 	//查询可以加入的二维比较点数量
//高速位置比较 
DMC_API short __stdcall dmc_hcmp_set_mode(WORD CardNo,WORD hcmp, WORD cmp_mode);//设置高速比较模式
DMC_API short __stdcall dmc_hcmp_get_mode(WORD CardNo,WORD hcmp, WORD* cmp_mode);
DMC_API short __stdcall dmc_hcmp_set_config(WORD CardNo,WORD hcmp,WORD axis, WORD cmp_source, WORD cmp_logic,long time);//配置高速比较相关参数
DMC_API short __stdcall dmc_hcmp_get_config(WORD CardNo,WORD hcmp,WORD* axis, WORD* cmp_source, WORD* cmp_logic,long* time);
DMC_API short __stdcall dmc_hcmp_add_point(WORD CardNo,WORD hcmp, long cmp_pos);//添加比较点
DMC_API short __stdcall dmc_hcmp_set_liner(WORD CardNo,WORD hcmp, long Increment,long Count);//设置线性比较模式相关参数
DMC_API short __stdcall dmc_hcmp_get_liner(WORD CardNo,WORD hcmp, long* Increment,long* Count);
DMC_API short __stdcall dmc_hcmp_get_current_state(WORD CardNo,WORD hcmp,long *remained_points,long *current_point=NULL,long *runned_points=NULL); //读取比较状态
DMC_API short __stdcall dmc_hcmp_clear_points(WORD CardNo,WORD hcmp); 	//清除比较点
DMC_API short __stdcall dmc_read_cmp_pin(WORD CardNo,WORD hcmp); //读取高速比较输出口状态
DMC_API short __stdcall dmc_write_cmp_pin(WORD CardNo,WORD hcmp, WORD on_off);
//通用IO		
DMC_API short __stdcall dmc_read_inbit(WORD CardNo,WORD bitno); 	//读取输入口的状态
DMC_API short __stdcall dmc_write_outbit(WORD CardNo,WORD bitno,WORD on_off); 	//设置输出口的状态
DMC_API short __stdcall dmc_read_outbit(WORD CardNo,WORD bitno);  	//读取输出口的状态
DMC_API DWORD __stdcall dmc_read_inport(WORD CardNo,WORD portno); 	//读取输入端口的值
DMC_API DWORD __stdcall dmc_read_outport(WORD CardNo,WORD portno=0); 	//读取输出端口的值
DMC_API short __stdcall dmc_write_outport(WORD CardNo,WORD portno,DWORD outport_val);  	//设置输出端口的值
//IO输出延时翻转
DMC_API short __stdcall dmc_IO_TurnOutDelay(WORD CardNo,WORD bitno,DWORD DelayTime);
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_reverse_outbit(WORD CardNo,WORD bitno,double reverse_time);
//3800专用 IO计数功能
DMC_API short __stdcall dmc_SetIoCountMode(WORD CardNo,WORD bitno,WORD mode,DWORD filter);
DMC_API short __stdcall dmc_GetIoCountMode(WORD CardNo,WORD bitno,WORD *mode,DWORD* filter);
DMC_API short __stdcall dmc_SetIoCountValue(WORD CardNo,WORD bitno,DWORD CountValue);
DMC_API short __stdcall dmc_GetIoCountValue(WORD CardNo,WORD bitno,DWORD* CountValue);
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
DMC_API short __stdcall dmc_set_io_count_mode(WORD CardNo,WORD bitno,WORD mode,double filter_time);//设置IO计数模式
DMC_API short __stdcall dmc_get_io_count_mode(WORD CardNo,WORD bitno,WORD *mode,double* filter_time);
DMC_API short __stdcall dmc_set_io_count_value(WORD CardNo,WORD bitno,DWORD CountValue);//设置IO计数值
DMC_API short __stdcall dmc_get_io_count_value(WORD CardNo,WORD bitno,DWORD* CountValue);//读取IO计数值
//伺服专用IO		
DMC_API short __stdcall dmc_set_alm_mode(WORD CardNo,WORD axis,WORD enable,WORD alm_logic,WORD alm_action);	//设置ALM信号
DMC_API short __stdcall dmc_get_alm_mode(WORD CardNo,WORD axis,WORD *enable,WORD *alm_logic,WORD *alm_action);	//读取设置ALM信号
DMC_API short __stdcall dmc_set_inp_mode(WORD CardNo,WORD axis,WORD enable,WORD inp_logic);	//设置INP信号
DMC_API short __stdcall dmc_get_inp_mode(WORD CardNo,WORD axis,WORD *enable,WORD *inp_logic);	//读取设置INP信号
DMC_API short __stdcall dmc_read_rdy_pin(WORD CardNo,WORD axis); 	//读取RDY状态
DMC_API short __stdcall dmc_write_erc_pin(WORD CardNo,WORD axis,WORD on_off); 	//控制ERC信号输出
DMC_API short __stdcall dmc_read_erc_pin(WORD CardNo,WORD axis);
 
DMC_API short __stdcall dmc_write_sevon_pin(WORD CardNo,WORD axis,WORD on_off); 	//输出SEVON信号
DMC_API short __stdcall dmc_read_sevon_pin(WORD CardNo,WORD axis); 	//读取SEVON信号