资源包/LabVIEW有用程序/例程DMC3000系列/Delphi/Demo_IOTest/LTDMC.pas


//速度设置
function dmc_set_profile(CardNo:WORD;axis:WORD;Min_Vel:double;Max_Vel:double;Tacc:double;Tdec:double;stop_vel:double):Smallint;stdcall; //设定速度曲线参数
function dmc_get_profile(CardNo:WORD;axis:WORD;out Min_Vel:double;out Max_Vel:double;out Tacc:double;out Tdec:double;out stop_vel:double):Smallint;stdcall; //读取速度曲线参数
function dmc_set_s_profile(CardNo:WORD;axis:WORD;s_mode:WORD;s_para:double):Smallint;stdcall; //设置平滑速度曲线参数
function dmc_get_s_profile(CardNo:WORD;axis:WORD;s_mode:WORD;out s_para:double):Smallint;stdcall; //读取平滑速度曲线参数
function dmc_set_vector_profile_multicoor(CardNo:WORD;crd:WORD;Min_Vel:double;Max_Vel:double;Tacc:double;Tdec:double;stop_vel:double):Smallint;stdcall; 
function dmc_get_vector_profile_multicoor(CardNo:WORD;crd:WORD;out Min_Vel:double;out Max_Vel:double;out Tacc:double;out Tdec:double;out stop_vel:double):Smallint;stdcall;
//运动模块脉冲模式
function dmc_set_pulse_outmode(CardNo:WORD;axis:WORD;outmode:WORD):Smallint;stdcall; //设定脉冲输出模式
function dmc_get_pulse_outmode(CardNo:WORD;axis:WORD;out outmode:WORD):Smallint;stdcall; //读取脉冲输出模式
//点位运动
function dmc_pmove(CardNo:WORD;axis:WORD;dist:longint;posi_mode:WORD):Smallint;stdcall; //指定轴做定长位移运动
function dmc_reset_target_position(CardNo:WORD;axis:WORD;dist:longint;posi_mode:WORD):Smallint;stdcall; //运动中改变目标位置
function dmc_change_speed(CardNo:WORD;axis:WORD;Curr_Vel:double;Taccdec:double):Smallint;stdcall; //在线改变指定轴的当前运动速度
function dmc_update_target_position(CardNo:WORD;axis:WORD;dist:longint;posi_mode:WORD):Smallint;stdcall; //运动中改变目标位置
//PVT运动
function dmc_PvtTable(CardNo:WORD;axis:WORD;count:LongWORD;pTime:double;pPos:longint;pVel:double):Smallint;stdcall;
function dmc_PtsTable(CardNo:WORD;axis:WORD;count:LongWORD;pTime:double;pPos:longint;pPercent:double):Smallint;stdcall;
function dmc_PvtsTable(CardNo:WORD;axis:WORD;count:LongWORD;pTime:double;pPos:longint; velBegin:double;velEnd:double):Smallint;stdcall;
function dmc_PttTable(CardNo:WORD;axis:WORD;count:LongWORD;pTime:double;pPos:longint):Smallint;stdcall;
function dmc_PvtMove(CardNo:WORD;AxisNum:WORD;AxisList:WORD):Smallint;stdcall;
//JOG运动
function dmc_vmove(CardNo:WORD;axis:WORD;dir:WORD):Smallint;stdcall; //指定轴做连续运动
//直线插补
function dmc_line_multicoor(CardNo:WORD;crd:WORD;axisNum:WORD;axisList:WORD;DistList:longint;posi_mode:WORD):Smallint;stdcall; 	//指定轴直线插补运动
//平面圆弧
function dmc_arc_move_multicoor(CardNo:WORD;crd:WORD;AxisList:WORD;Target_Pos:longint;Cen_Pos:longint;Arc_Dir:WORD;posi_mode:WORD):Smallint;stdcall;
//回零运动
function dmc_set_home_pin_logic(CardNo:WORD;axis:WORD;org_logic:WORD;filter:double):Smallint;stdcall;  //设置HOME信号
function dmc_get_home_pin_logic(CardNo:WORD;axis:WORD;out org_logic:WORD;out filter:double):Smallint;stdcall; //读取设置HOME信号
function dmc_set_homemode(CardNo:WORD;axis:WORD;home_dir:WORD;vel_mode:double;mode:WORD;EZ_count:WORD):Smallint;stdcall; //设定指定轴的回原点模式
function dmc_get_homemode(CardNo:WORD;axis:WORD;out home_dir:WORD;out vel_mode:double;out home_mode:WORD;out EZ_count:WORD):Smallint;stdcall; //读取指定轴的回原点模式
function dmc_home_move(CardNo:WORD;axis:WORD):Smallint;stdcall;
//3800专用 原点锁存
function dmc_set_homelatch_mode(CardNo:WORD;axis:WORD;enable:WORD;logic:WORD;source:WORD):Smallint;stdcall;
function dmc_get_homelatch_mode(CardNo:WORD;axis:WORD;out enable:WORD;out logic:WORD;out source:WORD):Smallint;stdcall;
function dmc_get_homelatch_flag(CardNo:WORD;axis:WORD):Smallint;stdcall;
function dmc_reset_homelatch_flag(CardNo:WORD;axis:WORD):Smallint;stdcall;
function dmc_get_homelatch_value(CardNo:WORD;axis:WORD):Smallint;stdcall;
//手轮运动
//3800专用 手轮通道选择
function dmc_set_handwheel_channel(CardNo:WORD;index:WORD):Smallint;stdcall;
function dmc_get_handwheel_channel(CardNo:WORD;out index:WORD):Smallint;stdcall;
//一个手轮信号控制单个轴运动		
function dmc_set_handwheel_inmode(CardNo:WORD;axis:WORD;inmode:WORD;multi:double;vh:double):Smallint;stdcall; 	//设置输入手轮脉冲信号的工作方式
function dmc_get_handwheel_inmode(CardNo:WORD;axis:WORD;out inmode:WORD;out multi:double;out vh:double):Smallint;stdcall; 	//读取输入手轮脉冲信号的工作方式
//3800专用 一个手轮信号控制多个轴运动
function dmc_set_handwheel_inmode_extern(CardNo:WORD;inmode:WORD;AxisNum:WORD;AxisList:WORD;multi:longint):Smallint;stdcall;	//设置输入手轮脉冲信号的工作方式 控制多轴
function dmc_get_handwheel_inmode_extern(CardNo:WORD;out inmode:WORD;out AxisNum:WORD;out AxisList:WORD;out multi:longint):Smallint;stdcall;	
//启动指定轴的手轮脉冲运动
function dmc_handwheel_move(CardNo:WORD;axis:WORD):Smallint;stdcall; 	
//编码器
function dmc_set_counter_inmode(CardNo:WORD;axis:WORD;mode:WORD):Smallint;stdcall;  //设定编码器的计数方式
function dmc_get_counter_inmode(CardNo:WORD;axis:WORD;out mode:WORD):Smallint;stdcall; //读取编码器的计数方式
function dmc_get_encoder(CardNo:WORD;axis:WORD):longint;stdcall;
function dmc_set_encoder(CardNo:WORD;axis:WORD;encoder_value:longint):Smallint;stdcall;
function dmc_set_ez_mode(CardNo:WORD;axis:WORD;ez_logic:WORD;ez_mode:WORD;filter:double):Smallint;stdcall; //设置EZ信号
function dmc_get_ez_mode(CardNo:WORD;axis:WORD;out ez_logic:WORD;out ez_mode:WORD;out filter:double):Smallint;stdcall; //读取设置EZ信号
//高速锁存
function dmc_set_ltc_mode(CardNo:WORD;axis:WORD;Ltc_logic:WORD;Ltc_Mode:WORD;filter:double):Smallint;stdcall;
function dmc_get_ltc_mode(CardNo:WORD;axis:WORD;out Ltc_logic:WORD;out Ltc_Mode:WORD;out filter:double):Smallint;stdcall;
function dmc_set_latch_mode(CardNo:WORD;axis:WORD;all_enable:WORD;latch_source:WORD;triger_chunnel:WORD):Smallint;stdcall;  	//设置锁存方式
function dmc_get_latch_mode(CardNo:WORD;axis:WORD;out all_enable:WORD;out latch_source:WORD;out triger_chunnel:WORD):Smallint;stdcall;
function dmc_get_latch_value(CardNo:WORD;axis:WORD):longint;stdcall;  	//读取锁存器的值
function dmc_get_latch_flag(CardNo:WORD;axis:WORD):Smallint;stdcall;  	//读取锁存器标志
function dmc_reset_latch_flag(CardNo:WORD;axis:WORD):Smallint;stdcall;  	//复位锁存器标志
function dmc_get_latch_value_extern(CardNo:WORD;axis:WORD;index:WORD):longint;stdcall;  //按索引读取锁存器的值
function dmc_get_latch_flag_extern(CardNo:WORD;axis:WORD):Smallint;stdcall;  	//读取有效锁存次数
//DMC3410专用 LTC端口触发延时急停时间 单位us
function dmc_set_latch_stop_time(CardNo:WORD;axis:WORD;time:longint):Smallint;stdcall; 
function dmc_get_latch_stop_time(CardNo:WORD;axis:WORD;out time:longint):Smallint;stdcall; 
//DMC3800专用 LTC反相输出
function dmc_SetLtcOutMode(CardNo:WORD;axis:WORD;enable:WORD;bitno:WORD):Smallint;stdcall; 
function dmc_GetLtcOutMode(CardNo:WORD;axis:WORD;out enable:WORD;out bitno:WORD):Smallint;stdcall; 
//单轴低速位置比较		
function dmc_compare_set_config(CardNo:WORD;axis:WORD;enable:WORD;cmp_source:WORD):Smallint;stdcall;  	//配置比较器
function dmc_compare_get_config(CardNo:WORD;axis:WORD;out enable:WORD;out cmp_source:WORD):Smallint;stdcall; 	//读取配置比较器
function dmc_compare_clear_points(CardNo:WORD;axis:WORD):Smallint;stdcall;  	//清除所有比较点
function dmc_compare_add_point(CardNo:WORD;axis:WORD;pos:longint;dir:WORD;action:WORD;actpara:LongWORD):Smallint;stdcall;  	//添加比较点
function dmc_compare_get_current_point(CardNo:WORD;axis:WORD;out pos:longint):Smallint;stdcall;  	//读取当前比较点
function dmc_compare_get_points_runned(CardNo:WORD;axis:WORD;out pointNum:longint):Smallint;stdcall;  	//查询已经比较过的点
function dmc_compare_get_points_remained(CardNo:WORD;axis:WORD;out pointNum:longint):Smallint;stdcall;  	//查询可以加入的比较点数量
//二维低速位置比较
function dmc_compare_set_config_extern(CardNo:WORD;enable:WORD;cmp_source:WORD):Smallint;stdcall;  	//配置比较器
function dmc_compare_get_config_extern(CardNo:WORD;out enable:WORD;out cmp_source:WORD):Smallint;stdcall; 	//读取配置比较器
function dmc_compare_clear_points_extern(CardNo:WORD):Smallint;stdcall;
function dmc_compare_add_point_extern(CardNo:WORD;axis:WORD;pos:longint;dir:WORD;action:WORD;actpara:LongWORD):Smallint;stdcall;  	//添加两轴位置比较点
function dmc_compare_get_current_point_extern(CardNo:WORD;out pos:longint):Smallint;stdcall;  	//读取当前比较点
function dmc_compare_get_points_runned_extern(CardNo:WORD;out pointNum:longint):Smallint;stdcall;  	//查询已经比较过的点
function dmc_compare_get_points_remained_extern(CardNo:WORD;out pointNum:longint):Smallint;stdcall;  	//查询可以加入的二维比较点数量
//3410专用 单轴高速位置比较
//function dmc_set_cmp_config(CardNo:WORD;axis:WORD;cmp_pos:longint;cmp_source:WORD;cmp_logic:WORD):Smallint;stdcall; 
//function dmc_get_cmp_config(CardNo:WORD;axis:WORD;out cmp_pos:longint;out cmp_source:WORD;out cmp_logic:WORD):Smallint;stdcall;
//function dmc_set_cmp_enable(CardNo:WORD;axis:WORD;cmp_enable:WORD):Smallint;stdcall; 
//function dmc_get_cmp_enable(CardNo:WORD;axis:WORD;out cmp_enable:WORD):Smallint;stdcall;
function dmc_hcmp_set_mode(CardNo:WORD;hcmp:WORD;cmp_mode:WORD):Smallint;stdcall; 
function dmc_hcmp_get_mode(CardNo:WORD;hcmp:WORD;cmp_mode:WORD):Smallint;stdcall; 
function dmc_hcmp_set_config(CardNo:WORD;hcmp:WORD;axis:WORD;cmp_source:WORD;cmp_logic:WORD;time:longint):Smallint;stdcall; 
function dmc_hcmp_get_config(CardNo:WORD;hcmp:WORD;out axis:WORD;out cmp_source:WORD;out cmp_logic:WORD;out time:longint):Smallint;stdcall;
function dmc_hcmp_add_point(CardNo:WORD;hcmp:WORD; cmp_pos:longint):Smallint;stdcall;
function dmc_hcmp_set_liner(CardNo:WORD;hcmp:WORD;Increment:longint;Count:longint):Smallint;stdcall;
function dmc_hcmp_get_liner(CardNo:WORD;hcmp:WORD;out Increment:longint;out Count:longint):Smallint;stdcall;
function dmc_hcmp_get_current_state(CardNo:WORD;hcmp:WORD;out remained_points:longint;out current_point:longint;out runned_points:longint):Smallint;stdcall;
function dmc_hcmp_clear_points(CardNo:WORD;hcmp:WORD):Smallint;stdcall; 	
function dmc_read_cmp_pin(CardNo:WORD;hcmp:WORD):Smallint;stdcall;
function dmc_write_cmp_pin(CardNo:WORD;hcmp:WORD;on_off:WORD):Smallint;stdcall; 

//通用IO
function dmc_read_inbit(CardNo:WORD;bitno:WORD):Smallint;stdcall; //读取输入口的状态
function dmc_write_outbit(CardNo:WORD;bitno:WORD;ON_OFF:WORD):Smallint;stdcall;  //设置输出口的状态
function dmc_read_outbit(CardNo:WORD;bitno:WORD):Smallint;stdcall;    //读取输出口的状态
function dmc_read_inport(CardNo:WORD;portno:WORD):LongWORD;stdcall; //读取输入端口的值
function dmc_read_outport(CardNo:WORD;portno:WORD):LongWORD;stdcall;   //读取输出端口的值
function dmc_write_outport(CardNo:WORD;IoMask:LongWORD;outport_val:LongWORD):Smallint;stdcall; //设置输出端口的值
//3800专用 IO辅助功能
function dmc_IO_TurnOutDelay(CardNo:WORD;bitno:WORD;DelayTime:LongWORD):Smallint;stdcall;
function dmc_SetIoCountMode(CardNo:WORD;bitno:WORD;mode:WORD;filter:LongWORD):Smallint;stdcall;
function dmc_GetIoCountMode(CardNo:WORD;bitno:WORD;out mode:WORD;out filter:LongWORD):Smallint;stdcall;
function dmc_SetIoCountValue(CardNo:WORD;bitno:WORD;CountValue:LongWORD):Smallint;stdcall;
function dmc_GetIoCountValue(CardNo:WORD;bitno:WORD;out CountValue:LongWORD):Smallint;stdcall;
//以上函数以毫秒为单位可继续使用，新函数将时间统一到秒为单位
function dmc_set_io_count_mode(CardNo:WORD;bitno:WORD;mode:WORD;filter_time:double):Smallint;stdcall;//设置IO计数模式
function dmc_get_io_count_mode(CardNo:WORD;bitno:WORD;mode:WORD;out filter_time:double):Smallint;stdcall;
function dmc_set_io_count_value(CardNo:WORD;bitno:WORD;CountValue:LongWORD):Smallint;stdcall;//设置IO计数值
function dmc_get_io_count_value(CardNo:WORD;bitno:WORD;out CountValue:LongWORD):Smallint;stdcall;//读取IO计数值

//IO输出延时
function dmc_reverse_outbit(CardNo:WORD;bitno:WORD;reverse_time:double):Smallint;stdcall;

//伺服专用IO
function dmc_set_inp_mode(CardNo:WORD;axis:WORD;enable:WORD;inp_logic:WORD):Smallint;stdcall; //设置INP信号
function dmc_get_inp_mode(CardNo:WORD;axis:WORD;out enable:WORD;out inp_logic:WORD):Smallint;stdcall; //读取设置INP信号
function dmc_set_alm_mode(CardNo:WORD;axis:WORD;enable:WORD;alm_logic:WORD;alm_action:WORD):Smallint;stdcall; //设置ALM信号
function dmc_get_alm_mode(CardNo:WORD;axis:WORD;out enable:WORD;out alm_logic:WORD;out alm_action:WORD):Smallint;stdcall; //读取设置ALM信号
function dmc_write_sevon_pin(CardNo:WORD;axis:WORD;ON_OFF:WORD):Smallint;stdcall;   //输出SEVON信号
function dmc_read_sevon_pin(CardNo:WORD;axis:WORD):WORD;stdcall;   //读取SEVON信号
function dmc_read_rdy_pin(CardNo:WORD;axis:WORD):Smallint;stdcall;   //读取RDY状态
function dmc_write_erc_pin(CardNo:WORD;axis:WORD;sel:WORD):Smallint;stdcall; //控制ERC信号输出
function dmc_read_erc_pin(CardNo:WORD;axis:WORD):Smallint;stdcall;
